Fixed some Bugs in Itemcreation

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,8 +6,8 @@ commands:
   giveitem:
     description: Gives you the requested Item
     aliases: [givei, gitem]
-    usage: "Usage: /giveitem [id]"
+    usage: "§cUsage: /giveitem <id>"
   spawnenemy:
     decription: Spawns the enemy you requested
     aliases: spawn
-    usage: "Usage: /spawnenemy [id]"
+    usage: "§cUsage: /spawnenemy [id]"
